--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "aws-amplify": "^3.3.11",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.2",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.6"
   }
 }
