--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-stripe-elements": "^6.1.2",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
@@ -46,6 +47,9 @@
     ]
   },
   "devDependencies": {
+    "@types/amazon-cognito-auth-js": "^1.2.2",
+    "@types/bootstrap": "^5.0.1",
+    "@types/react-bootstrap": "^0.32.25",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.6"
   }
